--- a/dolar_bacen.ipynb
+++ b/dolar_bacen.ipynb
@@ -56,18 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4d53beaa",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_dolar['data'] = pd.to_datetime(df_dolar['data'], format='%d/%m/%Y')\n",
-    "df_dolar['valor'] = df_dolar['valor'].astype('float')"
+    "df_dolar['valor'] = pd.to_numeric(df_dolar['valor'], errors='coerce')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d7da19c7",
    "metadata": {},
    "outputs": [],
@@ -96,27 +96,30 @@
     }
    ],
    "source": [
+    "load_dotenv()\n",
+    "\n",
     "sql_server = os.getenv(\"sql_server\").replace('\\\\\\\\', '\\\\')\n",
     "sql_database = os.getenv('sql_database')\n",
     "sql_username = os.getenv('sql_username')\n",
     "sql_password = os.getenv('sql_password')\n",
-    "sql_driver = os.getenv('sql_driver')\n",
-    "\n",
-    "load_dotenv()\n",
-    "\n"
+    "sql_driver = os.getenv('sql_driver')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "8eab004a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
+     "ename": "NameError",
+     "evalue": "name 'server' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(\u001b[43mserver\u001b[49m\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124m'\u001b[39m)))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'server' is not defined"
      ]
     }
    ],
